Cambios del 03 de noviembre (3)

--- a/capitulos/04/01.IntegracionIndefinida.ipynb
+++ b/capitulos/04/01.IntegracionIndefinida.ipynb
@@ -30,7 +30,7 @@
     ":label: th_primitivas\n",
     "Si $F$ y $G$ son dos primitivas de una misma función $f$ en un intervalo $I$, entonces,\n",
     "\n",
-    "$$ \\exists k \\in \\mathbb{R} \\text{ tal que } F(x)=G(x)+k, \\quad \\forall x \\in I.$$\n",
+    "$$ \\exists k \\in \\mathbb{R} \\mbox{ tal que } F(x)=G(x)+k, \\quad \\forall x \\in I.$$\n",
     "````\n",
     "\n",
     "Como consecuencia del anterior teorema, una vez conocida una primitiva $F$ de $f$, ya se pueden obtener todas al sumar únicamente una constante a la primitiva ya conocida."
@@ -49,14 +49,14 @@
     "\n",
     "Dada una función $f:I\\rightarrow \\mathbb{R}$, se llama integral indefinida de $f$ al conjunto de todas las primitivas de $f$, y se escribe\n",
     "\n",
-    "$$\\int f(x)\\, \\mathrm{d}x = \\{ F \\text{ tal que } F'(x)=f(x), \\quad \\forall x \\in I\\}.$$\n",
+    "$$\\int f(x)\\, \\mathrm{d}x = \\{ F : F'(x)=f(x), \\quad \\forall x \\in I\\}.$$\n",
     "````\n",
     "\n",
-    "Utilizando el {prf:ref}`th_primitivas`, es inmediato deducir que si conocemos una primitiva $F$ de $f$ su integral indefinida será\n",
+    "Utilizando el {prf:ref}`th_primitivas`, es inmediato deducir que si conocemos una primitiva $F$ de $f$, su integral indefinida será\n",
     "\n",
     "$$\\int f(x) \\, \\mathrm{d}x = \\{ F(x) +k, \\quad \\forall k \\in \\mathbb{R}\\}.$$\n",
     "\n",
-    "Entre las propiedades de la integral está la linealidad, que pasamos a enunciar.\n",
+    "Entre las propiedades de la integral está la linealidad, es decir:\n",
     "\n",
     "````{prf:property} Linealidad de la integración indefinida\n",
     ":label: prop_linealidad_int_indef \n",
@@ -80,7 +80,10 @@
     "* $\\displaystyle \\int \\dfrac{1}{\\cos^2(x)} \\, \\mathrm{d}x = \\tan(x) + C$,\n",
     "* $\\displaystyle \\int \\dfrac{1}{1+x^2} \\, \\mathrm{d}x = \\arctan(x) + C$,\n",
     "* $\\displaystyle \\int \\dfrac{1}{\\sqrt{1-x^2}} \\, \\mathrm{d}x = \\arcsin(x) + C$.\n",
-    "````"
+    "````\n",
+    "\n",
+    "¿Te apetece practicas un poco con las llamadas *integrales inmediatas*? Aquí puedes hacerlo: \n",
+    "* https://www.matesfacil.com/ejercicios-resueltos-integrales-inmediatas.htm"
    ]
   },
   {
@@ -107,6 +110,7 @@
     "Es conveniente utilizar este método para los productos de:\n",
     "* polinomio (actúa como $u$) contra exponencial (actúa como $dv$), \n",
     "* polinomio ($u$) contra seno o coseno ($dv$),\n",
+    "* inversa de trigonométrica o logarítmica ($u$) contra polinomio ($dv$),\n",
     "* exponencial ($u$ o $dv$) contra seno o coseno ($dv$ o $u$).\n",
     "\n",
     "Veamos un ejemplo para aplicar el método de integración por partes.\n",
