Cambios del 03 de noviembre (4)

--- a/capitulos/04/01.IntegracionIndefinida.ipynb
+++ b/capitulos/04/01.IntegracionIndefinida.ipynb
@@ -82,8 +82,9 @@
     "* $\\displaystyle \\int \\dfrac{1}{\\sqrt{1-x^2}} \\, \\mathrm{d}x = \\arcsin(x) + C$.\n",
     "````\n",
     "\n",
-    "¿Te apetece practicas un poco con las llamadas *integrales inmediatas*? Aquí puedes hacerlo: \n",
-    "* https://www.matesfacil.com/ejercicios-resueltos-integrales-inmediatas.htm"
+    "¿Te apetece practicar un poco con las llamadas *integrales inmediatas*? Aquí puedes hacerlo: \n",
+    "* https://www.matesfacil.com/ejercicios-resueltos-integrales-inmediatas.htm\n",
+    "* https://thales.cica.es/rd/Recursos/rd97/Problemas/54-1-p-INM.HTML"
    ]
   },
   {
