--- a/capitulos/04/04.IntegracionNumerica.ipynb
+++ b/capitulos/04/04.IntegracionNumerica.ipynb
@@ -118,7 +118,7 @@
     "\n",
     "Entonces tendremos:\n",
     "\n",
-    "* Punto medio o Simpson compuestos, con $n$ par: $\\displaystyle \\int_a^b f(x)\\,dx = \\sum_{i=1}^{2/n} \\int_{x_{2i-2}}^{x_{2i}} f(x)\\,dx$.\n",
+    "* Punto medio o Simpson compuestos, con $n$ par: $\\displaystyle \\int_a^b f(x)\\,dx = \\sum_{i=1}^{n/2} \\int_{x_{2i-2}}^{x_{2i}} f(x)\\,dx$.\n",
     "* Trapecio compuesto: $\\displaystyle \\int_a^b f(x)\\,dx = \\sum_{i=0}^{n} \\int_{x_{i-1}}^{x_{i}} f(x)\\,dx$.\n",
     "\n",
     "Ahora, dependiendo de la fórmula simple que elijamos tendremos:\n",
