Cambios del 22Nov

--- a/capitulos/02/05.Continuidad.ipynb
+++ b/capitulos/02/05.Continuidad.ipynb
@@ -47,6 +47,10 @@
     "\n",
     "<img src=\"../../images/cap3_discontinuidades.png\" width=\"500\"/>\n",
     "\n",
+    "Un toque de humor, sacado de la cuenta de Twitter de `@MathMatize`:\n",
+    "\n",
+    "<img src=\"../../images/cap3_meme_continuidad.jpg\" width=\"500\"/>\n",
+    "\n",
     "Algunas propiedades importantes de la continuidad son las siguientes.\n",
     "\n",
     "````{prf:property} Álgebra de las funciones continuas\n",
@@ -54,8 +58,8 @@
     ":nonumber: \n",
     "\n",
     "Sean $f,g:A\\subset\\mathbb{R}\\rightarrow\\mathbb{R}$ funciones continuas en un punto $x_0\\in A$. Entonces\n",
-    "* $\\lambda f$ es continua en $x_0$, $\\forall\\lambda\\in\\mathbb{R}$,\n",
-    "* $f\\pm g$ es continua en $x_0$,\n",
+    "* $\\lambda f$ es cont. en $x_0$, $\\forall\\lambda\\in\\mathbb{R}$,\n",
+    "* $f\\pm g$ es cont. en $x_0$,\n",
     "* $fg$ es continua en $x_0$,\n",
     "* si $g(x_0)\\not=0$, $\\frac{f}{g}$ es continua en $x_0$.\n",
     "````\n",
