--- a/capitulos/04/04.IntegracionNumerica.ipynb
+++ b/capitulos/04/04.IntegracionNumerica.ipynb
@@ -139,7 +139,7 @@
     "    \\begin{eqnarray*}\n",
     "    \\int_a^b f(x)\\,dx = \\sum_{i=1}^{n} \\int_{x_{i-1}}^{x_{i}} f(x)\\, dx &\\approx& \n",
     "    \\sum_{i=1}^{n} \\frac{h}{2} \\left( f\\left(x_{i-1}\\right) + f\\left(x_{i}\\right) \\right) \\\\\n",
-    "    &=& \\frac{h}{2} \\left( f(x_{0}) + \\sum_{i=1}^{n-1}f(x_{i}) + f(x_{n}) \\right)\n",
+    "    &=& \\frac{h}{2} \\left( f(x_{0}) + 2 \\sum_{i=1}^{n-1}f(x_{i}) + f(x_{n}) \\right)\n",
     "    \\end{eqnarray*}\n",
     "    <img src=\"../../images/cap4_trapecio_compuesto.png\" width=\"300\"/>\n",
     "    </center>\n",
