--- a/capitulos/03/04.AplicacionesDerivada.ipynb
+++ b/capitulos/03/04.AplicacionesDerivada.ipynb
@@ -210,15 +210,15 @@
     "\n",
     "*Existencia*\n",
     "\n",
-    "$$\n",
+    "\\begin{align*}\n",
     "\\left.\\begin{array}{l}\n",
     "f\\mbox{ continua en }[0,\\pi] \\\\\n",
     "f(0)=0+\\sin 0-\\frac{1}{\\sqrt{0}+3}=-\\frac{1}{3}<0 \\\\\n",
     "f(\\pi)= \\pi+\\sin \\pi-\\frac{1}{\\sqrt{\\pi}+3}=\\pi-\\frac{1}{\\sqrt{\\pi}+3}>0\n",
     "\\end{array}\\right\\} \n",
-    "\\stackrel{\\mbox{(Bolzano)}}{\\Longrightarrow}\n",
-    "\\mbox{Existe raíz de $f$ en }[0,\\pi].\n",
-    "$$\n",
+    "& \\stackrel{\\mbox{(Bolzano)}}{\\Longrightarrow}\n",
+    "\\exists\\mbox{ raíz de $f$ en }[0,\\pi].\n",
+    "\\end{align*}\n",
     "\n",
     "*Unicidad*\n",
     "\n",
@@ -236,8 +236,11 @@
     "\\left.\\begin{array}{ll}\n",
     "1+\\cos x>0&\\quad\\forall x\\in(0,\\pi) \\\\\n",
     "\\dfrac{1}{2\\sqrt{x}\\left(\\sqrt{x}+3\\right)^2}>0&\\quad\\forall x\\in(0,\\pi)\n",
-    "\\end{array}\\right\\}\n",
-    "\\Rightarrow\n",
+    "\\end{array}\\right\\},\n",
+    "$$\n",
+    "entonces\n",
+    "\n",
+    "$$\n",
     "f'(x)=1+\\cos x+\\frac{1}{2\\sqrt{x}\\left(\\sqrt{x}+3\\right)^2}>0\\quad\\forall x\\in(0,\\pi),\n",
     "$$\n",
     "lo que contradice el que exista un punto en el que $f'$ se anula. Por lo tanto, es\n",
