--- a/capitulos/02/05.Continuidad.ipynb
+++ b/capitulos/02/05.Continuidad.ipynb
@@ -146,7 +146,7 @@
     "Sea $f:[a,b]\\rightarrow\\mathbb{R}$ una función continua en $[a,b]$ tal que $f(a)f(b)<0$.\n",
     "Entonces existe $x_0\\in(a,b)$ tal que $f(x_0)=0$.\n",
     "\n",
-    "<img src=\"../../images/cap3_bolzano_1_2.png\" width=\"500\"/>\n",
+    "<img src=\"../../images/cap3_Bolzano_1_2.png\" width=\"500\"/>\n",
     "````\n",
     "\n",
     "El teorema de Bolzano habla de la existencia de raíces para funciones continuas. Debemos\n",
@@ -155,7 +155,7 @@
     "1. Pueden existir varias raíces, como se muestra en el gráfico de la derecha en la figura anterior.\n",
     "2.  Si se suprime alguna de las hipótesis, el teorema, en general, no es válido, como se muestra en la siguiente figura.\n",
     "\n",
-    "<img src=\"../../images/cap3_bolzano_3.png\" width=\"500\"/>\n",
+    "<img src=\"../../images/cap3_Bolzano_3.png\" width=\"500\"/>\n",
     "\n",
     "````{prf:theorem} Teorema de Weierstrass\n",
     ":label: th_Weierstrass\n",
@@ -174,7 +174,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.10.8 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -188,11 +188,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.8"
   },
   "vscode": {
    "interpreter": {
-    "hash": "4253bf17849ddc6b6e8c6b6b1c64951bcfcb143729dea15b0d22aeda669b2aa2"
+    "hash": "f2c0f1c90395c109e1b87b1f4d6d2ea9e1b09c8587e65b0565fcfbe20df05a54"
    }
   }
  },
