--- a/capitulos/03/04.AplicacionesDerivada.ipynb
+++ b/capitulos/03/04.AplicacionesDerivada.ipynb
@@ -149,7 +149,7 @@
     "\\begin{equation*}\n",
     "f^{\\prime} (\\xi) = 0 \\, .\n",
     "\\end{equation*}\n",
-    "<img src=\"../../images/cap_deriv_Rolle.png\" width=\"400\"/>\n",
+    "<img src=\"../../images/cap_deriv_rolle.png\" width=\"400\"/>\n",
     "\n",
     "````\n",
     "\n",
@@ -261,7 +261,7 @@
     "\\begin{equation*}\n",
     "f(b) - f(a) = f' (\\xi) (b - a) \\, .\n",
     "\\end{equation*}\n",
-    "<img src=\"../../images/cap_deriv_Lagrange.png\" width=\"400\"/>\n",
+    "<img src=\"../../images/cap_deriv_lagrange.png\" width=\"400\"/>\n",
     "\n",
     "````\n",
     "Basta recordar que $\\displaystyle\\frac{f(b) - f(a)}{b-a}$ es la pendiente de la recta secante a $f$ por $a$ y $b$ para tener la interpretación geométrica de este teorema, que mostramos en la imagen anterior: \n",
