Cambios del 29Nov

--- a/capitulos/04/06.AplicacionesIntegral.ipynb
+++ b/capitulos/04/06.AplicacionesIntegral.ipynb
@@ -230,7 +230,8 @@
     "V=\\int_a^b A(x) dx.\n",
     "$$\n",
     "\n",
-    "Puedes verlo con más detalle aquí: https://es.wikipedia.org/wiki/Principio_de_Cavalieri"
+    "* Puedes verlo con más detalle aquí: https://es.wikipedia.org/wiki/Principio_de_Cavalieri\n",
+    "* En esta aplicación de Geogebra, realizada por Marco Rainaldi, puedes visualizar cortes tridimensionales en muchos ejemplos interesantes: https://www.geogebra.org/m/nbknkjtp."
    ]
   },
   {
