Cambios del 01Dic

--- a/capitulos/04/06.AplicacionesIntegral.ipynb
+++ b/capitulos/04/06.AplicacionesIntegral.ipynb
@@ -253,7 +253,9 @@
     "\n",
     "$$\n",
     "V=\\pi \\int_a^b |f(x)|^2 dx.\n",
-    "$$\n"
+    "$$\n",
+    "\n",
+    "Puedes ilustrar el proceso en la siguiente aplicación de Geogebra, realizada por José Luis Vergara Ibarra: https://www.geogebra.org/m/jxkmyeax "
    ]
   },
   {
@@ -433,6 +435,19 @@
     "<b>Ejercicio:</b> \n",
     "\n",
     "Calcular el volumen del sólido generado al rotar alrededor del eje $OY$ la región comprendida entre la parábola $y^2=8x$ y la recta $x=2$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "493cf4d7",
+   "metadata": {},
+   "source": [
+    "## Para seguir practicando\n",
+    "\n",
+    "Puedes encontrar más ejercicios aquí:\n",
+    "\n",
+    "* Página de Daniel Partal García, profesor en el Colegio Marista de La Inmaculada (Granada): https://danipartal.net/pdf/2bachTema89Teoria02.pdf\n",
+    "* El blog de siempre: https://existelimite.blogspot.com/search/label/Aplicaciones%20de%20la%20integral\n"
    ]
   }
  ],
