Cambios del 02 de diciembre

--- a/capitulos/04/06.AplicacionesIntegral.ipynb
+++ b/capitulos/04/06.AplicacionesIntegral.ipynb
@@ -446,7 +446,7 @@
     "\n",
     "Puedes encontrar más ejercicios aquí:\n",
     "\n",
-    "* Página de Daniel Partal García, profesor en el Colegio Marista de La Inmaculada (Granada): https://danipartal.net/pdf/2bachTema89Teoria02.pdf\n",
+    "* Página (en el portal de Geogebra) de Daniel Partal García, profesor en el Colegio Marista de La Inmaculada (Granada), con un montón de ejercicios planteados y resueltos: https://www.geogebra.org/m/x8zyquyk#material/sqjs77gg\n",
     "* El blog de siempre: https://existelimite.blogspot.com/search/label/Aplicaciones%20de%20la%20integral\n"
    ]
   }
