Cambios del 09 de diciembre (2)

--- a/capitulos/04/07.EcuacionesDiferenciales.ipynb
+++ b/capitulos/04/07.EcuacionesDiferenciales.ipynb
@@ -5,9 +5,9 @@
    "metadata": {},
    "source": [
     "(sec:edos)=\n",
-    "# Ecuaciones Diferenciales Ordinarias (EDOs)\n",
+    "# Ecuaciones diferenciales\n",
     "\n",
-    "## Primeras definiciones y algunos ejemplos.\n",
+    "## Primeras definiciones\n",
     "\n",
     "````{prf:definition} \n",
     ":label: def_EDO \n",
@@ -162,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Modelización matemática. Algunos ejemplos\n",
+    "## Modelización matemática\n",
     "\n",
     "#### Ley de enfriamiento de Newton\n",
     "\n",
@@ -277,7 +277,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ecuaciones diferenciales en variables separadas.\n",
+    "## EDOs en variables separadas\n",
     "\n",
     "````{prf:definition} Ecuación diferencial en variables separadas \n",
     ":label: def_EDO_separable\n",
@@ -455,7 +455,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ecuaciones diferenciales lineales de primer orden.\n",
+    "## EDOs lineales de primer orden\n",
     "\n",
     "````{prf:definition} Ecuación diferencial lineal de primer orden \n",
     ":label: def_EDO_lineal\n",
