--- a/capitulos/04/07.EcuacionesDiferenciales.ipynb
+++ b/capitulos/04/07.EcuacionesDiferenciales.ipynb
@@ -277,6 +277,81 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Uso de `Sympy` para resolver EDOs\n",
+    "\n",
+    "A continuación mostramos cómo se puede utilizar `Sympy` en la resolución de EDOs. \n",
+    "\n",
+    "Realmente, es muy sencillo. \n",
+    "\n",
+    "1. Definimos la EDO con el comando `sp.Eq`, destacando la dependencia de la variable dependiente de la independiente. En el siguiente ejemplo, puedes ver cómo en la línea 7 escribimos `v(x)' cada vez que aparece la variable dependiente $v$.\n",
+    "2. Las derivadas se escriben, dentro de la definición `sp.Eq` indicando la variable dependiente y la variable dependiente respecto a la que se derivan. En el ejemplo que aparece a continuación, escribimos $v'$ como `v(x).diff(x)`.\n",
+    "3. Una vez definida la EDO, la resolvemos con el comando `sp.dsolve`.\n",
+    "4. Podemos usar `sp.dsolve` sin más atributos para encontrar la solución general, o podemos incluir una condición inicial, que debemos definir como `ics`, como se puede ver en la penúltima línea del siguiente código.\n",
+    "\n",
+    "Como ejemplo, vamos a calcular la velocidad de un cuerpo con masa $72$ kilogramos, si suponemos que su velocidad inicial es nula y su coeficiente de resistencia al aire es $k=0.2$. \n",
+    "\n",
+    "Es decir, en función de lo que vimos en la sección anterior, vamos a resolver el problema de valor inicial\n",
+    "\n",
+    "$$\n",
+    "    \\left\\{\\begin{array}{rcl}\n",
+    "    72 v'&=& 72*9.81 - 0.2 v\\,,\\\\\n",
+    "    v(0) &=& 0\\,,\n",
+    "    \\end{array}\\right.\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle v{\\left(x \\right)} = C_{1} e^{- 0.00277777777777778 x} + 3531.6$"
+      ],
+      "text/plain": [
+       "Eq(v(x), C1*exp(-0.00277777777777778*x) + 3531.6)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle v{\\left(x \\right)} = 3531.6 - 3531.6 e^{- 0.00277777777777778 x}$"
+      ],
+      "text/plain": [
+       "Eq(v(x), 3531.6 - 3531.6*exp(-0.00277777777777778*x))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import sympy as sp\n",
+    "\n",
+    "x = sp.symbols ('x')\n",
+    "v = sp.Function ('v')\n",
+    "\n",
+    "# Escribimos la EDO \n",
+    "eq = sp.Eq (72*v(x).diff(x), 72*9.81 - 0.2*v(x))\n",
+    "\n",
+    "# Calculamos su solución general (este paso no sería necesario, pero queda como ejemplo)\n",
+    "s_general = sp.dsolve (eq)   \n",
+    "display (s_general)\n",
+    "\n",
+    "# Calculamos la solución particular que nos preguntan\n",
+    "s_particular = sp.dsolve (eq, ics={v(0): 0.0}) \n",
+    "display (s_particular)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## EDOs en variables separadas\n",
     "\n",
     "````{prf:definition} Ecuación diferencial en variables separadas \n",
@@ -448,7 +523,39 @@
     "$$\n",
     "````\n",
     "\n",
-    "**Nota:** Fíjate que en los ejemplos anteriores, siempre es posible comprobar si hemos obtenido la solución correcta."
+    "**Nota:** Fíjate que en los ejemplos anteriores, siempre es posible comprobar si hemos obtenido la solución correcta... y, si no, podemos usar `Sympy`. Veámosolo, por ejemplo, sobre el último ejemplo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle y{\\left(x \\right)} = \\tan{\\left(C_{1} + \\log{\\left(x \\right)} \\right)}$"
+      ],
+      "text/plain": [
+       "Eq(y(x), tan(C1 + log(x)))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import sympy as sp\n",
+    "\n",
+    "x = sp.symbols ('x')\n",
+    "y = sp.Function ('y')\n",
+    "\n",
+    "# Escribimos la EDO \n",
+    "eq = sp.Eq (x*y(x).diff(x), 1+ y(x)**2)\n",
+    "\n",
+    "# Calculamos su solución general (este paso no sería necesario, pero así completamos el ejercicio)\n",
+    "s_general = sp.dsolve (eq)   \n",
+    "display (s_general)"
    ]
   },
   {
@@ -566,7 +673,57 @@
     "$$\n",
     "y(x)=\\frac{1}{2}\\left( \\sin(x)-\\cos(x)+5e^{-x}\\right).\n",
     "$$\n",
-    "````"
+    "````\n",
+    "\n",
+    "Veamos a continuación cómo resolver este último problema aprovechando la potencia de `Sympy`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle y{\\left(x \\right)} = C_{1} e^{- x} + \\frac{\\sin{\\left(x \\right)}}{2} - \\frac{\\cos{\\left(x \\right)}}{2}$"
+      ],
+      "text/plain": [
+       "Eq(y(x), C1*exp(-x) + sin(x)/2 - cos(x)/2)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle y{\\left(x \\right)} = \\frac{\\sin{\\left(x \\right)}}{2} - \\frac{\\cos{\\left(x \\right)}}{2} + 2.5 e^{- x}$"
+      ],
+      "text/plain": [
+       "Eq(y(x), sin(x)/2 - cos(x)/2 + 2.5*exp(-x))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import sympy as sp\n",
+    "\n",
+    "x = sp.symbols ('x')\n",
+    "y = sp.Function ('y')\n",
+    "\n",
+    "# Escribimos la EDO \n",
+    "eq = sp.Eq (y(x).diff(x) + y(x), sp.sin(x))\n",
+    "\n",
+    "# Resolvemos su solución general (realmente este paso no sería necesario, pero así completamos el ejercicio)\n",
+    "s_general = sp.dsolve (eq)   \n",
+    "display (s_general)\n",
+    "\n",
+    "# Calculamos la solución particular que nos preguntan\n",
+    "s_particular = sp.dsolve (eq, ics={y(0): 2.0}) \n",
+    "display (s_particular)"
    ]
   },
   {
