Cambios del 23 de diciembre

--- a/capitulos/04/07.EcuacionesDiferenciales.ipynb
+++ b/capitulos/04/07.EcuacionesDiferenciales.ipynb
@@ -210,14 +210,14 @@
     "Llamaremos $N(t)$ al número de núcleos radiactivos en el instante $t$. La ley de desintegración radiactiva dice: *la tasa a la que se desintegrarán sus núcleos será constante y no cambiará con el tiempo*. Como esta tasa es la variación en el número de núcleos, es decir, la derivada de $N$ en función del tiempo, podemos escribir la ecuación diferencial que rige el proceso:\n",
     "\n",
     "$$\n",
-    "\\frac{dN}{dt} = -KN \\Leftrightarrow N' = -K N.\n",
+    "\\frac{dN}{dt} = -kN \\Leftrightarrow N' = -k N.\n",
     "$$\n",
     "\n",
     "Si conocemos la cantidad inicial de material, $N_{0}$, ya tendremos un problema de valor inicial con el que podremos trabajar:\n",
     "\n",
     "$$\n",
     "\\left\\{\\begin{array}{lcl}\n",
-    "\\displaystyle\\frac{dN}{dt} &=& -KN \\\\\n",
+    "\\displaystyle\\frac{dN}{dt} &=& -kN \\\\\n",
     "N(0) &=& N_{0}\n",
     "\\end{array} \\right.\n",
     "$$\n",
@@ -227,7 +227,7 @@
     "Comprueba que el tiempo de semidesintegración radiactiva (es decir, el tiempo necesario para que se desintegre la mitad del material inicialmente presente) es\n",
     "\n",
     "$$\n",
-    "t_{0} = \\frac{\\ln 2}{K}.\n",
+    "t_{0} = \\frac{\\ln 2}{k}.\n",
     "$$\n",
     "\n",
     "### Segunda ley de Newton\n",
@@ -283,10 +283,11 @@
     "\n",
     "Realmente, es muy sencillo. \n",
     "\n",
-    "1. Definimos la EDO con el comando `sp.Eq`, destacando la dependencia de la variable dependiente de la independiente. En el siguiente ejemplo, puedes ver cómo en la línea 7 escribimos `v(x)' cada vez que aparece la variable dependiente $v$.\n",
-    "2. Las derivadas se escriben, dentro de la definición `sp.Eq` indicando la variable dependiente y la variable dependiente respecto a la que se derivan. En el ejemplo que aparece a continuación, escribimos $v'$ como `v(x).diff(x)`.\n",
-    "3. Una vez definida la EDO, la resolvemos con el comando `sp.dsolve`.\n",
-    "4. Podemos usar `sp.dsolve` sin más atributos para encontrar la solución general, o podemos incluir una condición inicial, que debemos definir como `ics`, como se puede ver en la penúltima línea del siguiente código.\n",
+    "1. Las variables independientes se definen como símbolos (`sp.Symbol`), mientras que las variables dependientes se definen como funciones (`sp.Function`).  \n",
+    "2. Definimos la EDO con el comando `sp.Eq`, destacando la dependencia de la variable dependiente de la independiente. En el siguiente ejemplo, puedes ver cómo en la línea 7 escribimos `v(x)' cada vez que aparece la variable dependiente $v$.\n",
+    "3. Las derivadas se escriben, dentro de la definición `sp.Eq` indicando la variable dependiente y la variable dependiente respecto a la que se derivan. En el ejemplo que aparece a continuación, escribimos $v'$ como `v(x).diff(x)`.\n",
+    "4. Una vez definida la EDO, la resolvemos con el comando `sp.dsolve`.\n",
+    "5. Podemos usar `sp.dsolve` sin más atributos para encontrar la solución general, o podemos incluir una condición inicial, que debemos definir como `ics`, como se puede ver en la penúltima línea del siguiente código.\n",
     "\n",
     "Como ejemplo, vamos a calcular la velocidad de un cuerpo con masa $72$ kilogramos, si suponemos que su velocidad inicial es nula y su coeficiente de resistencia al aire es $k=0.2$. \n",
     "\n",
@@ -333,7 +334,9 @@
    "source": [
     "import sympy as sp\n",
     "\n",
-    "x = sp.symbols ('x')\n",
+    "# Variable independiente\n",
+    "x = sp.Symbol ('x')\n",
+    "# Variable dependiente (definida como Function)\n",
     "v = sp.Function ('v')\n",
     "\n",
     "# Escribimos la EDO \n",
